syntax = "proto3";
option java_multiple_files = true;
package com.sd.grpc.rpc;

message CarMessage{
  int32 id = 1;
  string name = 2;
  string brand = 3;
  int32 fabricationYear = 4;
  int32 modelYear = 5;
  double price = 6;
}

service CarRPC {
  rpc Create(CreateCarRequest) returns (CreateCarResponse) {}
  rpc Update(UpdateCarRequest) returns (UpdateCarResponse) {}
  rpc FindById(FindByIdRequest) returns (FindByIdResponse) {}
  rpc FindAll(FindAllRequest) returns (FindAllResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}


message CreateCarRequest {
  string name = 1;
  string brand = 2;
  int32 fabricationYear = 3;
  int32 modelYear = 4;
  double price = 5;
}

message CreateCarResponse {
  CarMessage car = 1;
}

message UpdateCarRequest {
  CarMessage car = 1;
}

message UpdateCarResponse {
  CarMessage car = 1;
}

message FindByIdRequest {
  int32 product_id = 1;
}

message FindByIdResponse {
  CarMessage car = 1;
}

message FindAllRequest {}
message FindAllResponse {
  repeated CarMessage car = 1;
}

message DeleteRequest {
  CarMessage car = 1;
}

message DeleteResponse {}