syntax = "proto3";
option java_multiple_files = true;
package com.sd.grpc.rpc;

message ProductMessage{
  int32 id = 1;
  string name = 2;
  string brand = 3;
  int32 fabricationYear = 4;
  int32 modelYear = 5;
  double price = 6;
}

service ProductRPC {
  rpc Create(CreateProductRequest) returns (CreateProductResponse) {}
  rpc Update(UpdateProductRequest) returns (UpdateProductResponse) {}
  rpc FindById(FindByIdRequest) returns (FindByIdResponse) {}
  rpc FindAll(FindByIdRequest) returns (FindAllResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}


message CreateProductRequest {
  string name = 1;
  string brand = 2;
  int32 fabricationYear = 3;
  int32 modelYear = 4;
  double price = 5;
}

message CreateProductResponse {
  ProductMessage product = 1;
}

message UpdateProductRequest {
  ProductMessage product = 1;
}

message UpdateProductResponse {
  ProductMessage product = 1;
}

message FindByIdRequest {
  int32 product_id = 1;
}

message FindByIdResponse {
  ProductMessage product = 1;
}

message FindAllRequest {}
message FindAllResponse {
  repeated ProductMessage products = 1;
}

message DeleteRequest {
  ProductMessage product = 1;
}

message DeleteResponse {}